fix: (tooltip): fixed spacing between title and content to 8px

--- a/packages/themes/src/bootstrap/artbasel/scss/_popover.scss
+++ b/packages/themes/src/bootstrap/artbasel/scss/_popover.scss
@@ -34,7 +34,7 @@
 
   .popover-title {
     width: 85%;
-    padding: 0.5rem 0.5rem;
+    padding: 0.5rem 0.5rem 0rem 0.5rem;
     line-height: 1rem;
   }
 
